--- a/src/Spryker/Translator/composer.json
+++ b/src/Spryker/Translator/composer.json
@@ -4,17 +4,22 @@
   "description": "Translator module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
+    "spryker/application-extension": "^1.0.0",
     "spryker/kernel": "^3.0.0",
-    "spryker/symfony": "^3.0.0",
-    "spryker/twig": "^3.0.0"
+    "spryker/locale": "^3.0.0",
+    "spryker/messenger-extension": "^1.0.0",
+    "spryker/symfony": "^3.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
+    "spryker/container": "*",
     "spryker/installer": "*",
-    "spryker/propel": "*",
-    "spryker/testify": "*",
-    "spryker/messenger": "*",
-    "spryker/silex": "*"
+    "spryker/testify": "*"
+  },
+  "suggest": {
+    "spryker/container": "If you want to use Translator service. . Minimum required version: 1.0.0",
+    "spryker/installer": "If you want to use Installer plugins. Minimum required version: 4.0.1"
   },
   "autoload": {
     "psr-4": {
@@ -35,10 +40,5 @@
   },
   "config": {
     "sort-packages": true
-  },
-  "suggest": {
-    "spryker/installer": "If you want to use Installer plugins. Minimum required version: 4.0.1",
-    "spryker/messenger": "If you want to use ServiceProvider",
-    "spryker/silex": "If you want to use silex application for locale management"
   }
 }
