--- a/src/Spryker/UserLocale/composer.json
+++ b/src/Spryker/UserLocale/composer.json
@@ -4,6 +4,8 @@
   "description": "UserLocale module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
+    "spryker/application-extension": "^1.0.0",
     "spryker/kernel": "^3.0.0",
     "spryker/locale": "^3.0.0",
     "spryker/user": "^3.0.0",
@@ -11,20 +13,16 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
-    "spryker/silex": "*",
+    "spryker/container": "*",
     "spryker/testify": "*"
   },
   "suggest": {
+    "spryker/container": "If you want to use Application plugins. Minimum required version: 1.0.0",
     "spryker/silex": "Use this module when using plugins that need Silex dependencies, minimum required version: 2.0.1"
   },
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
