--- a/src/Spryker/SharedCart/composer.json
+++ b/src/Spryker/SharedCart/composer.json
@@ -16,6 +16,7 @@
     "spryker/permission-extension": "^1.1.0",
     "spryker/persistent-cart": "^1.0.0",
     "spryker/persistent-cart-extension": "^1.0.0",
+    "spryker/store": "^1.0.0",
     "spryker/propel-orm": "^1.6.0",
     "spryker/quote": "^2.7.0",
     "spryker/quote-extension": "^1.0.0",
