--- a/src/Spryker/Gui/composer.json
+++ b/src/Spryker/Gui/composer.json
@@ -9,18 +9,17 @@
     "spryker/propel-orm": "^1.0.0",
     "spryker/symfony": "^3.0.0",
     "spryker/twig": "^3.0.0",
-    "spryker/util-sanitize": "^2.0.0"
+    "spryker/util-sanitize": "^2.0.0",
+    "spryker/util-text": "*"
   },
   "require-dev": {
     "spryker/application": "*",
     "spryker/propel": "*",
     "spryker/silex": "*",
-    "spryker/testify": "*",
-    "spryker/util-text": "*"
+    "spryker/testify": "*"
   },
   "suggest": {
-    "spryker/silex": "If you want to use ServiceProvider.",
-    "spryker/util-text": "If you want to use UrlFunction twig plugin."
+    "spryker/silex": "If you want to use ServiceProvider."
   },
   "autoload": {
     "psr-4": {
