--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "spryker/util-text": "^1.2.1"
   },
   "require-dev": {
-    "spryker/code-sniffer": "*",
-    "spryker/testify": "*"
+    "spryker/code-sniffer": "*"
   },
   "autoload": {
     "psr-4": {
